fixed cmake errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,11 +31,13 @@ include(cmake/compile_flags.cmake)
 include(cmake/testing_framework.cmake)
 
 set(VISAGE_INCLUDE ${CMAKE_CURRENT_BINARY_DIR}/include)
+include_directories(${VISAGE_INCLUDE_PATH} ${VISAGE_INCLUDE})
 
 function(amalgamate_headers AMALGAMATED_HEADER_NAME FILE_HEADERS)
   set(FILE_CONTENTS "// Auto generated amalgamated header.\n")
   foreach (FILE ${FILE_HEADERS})
-    set(FILE_CONTENTS "${FILE_CONTENTS}#include \"${FILE}\"\n")
+    file(RELATIVE_PATH REL_FILE "${PROJECT_SOURCE_DIR}" "${FILE}")
+    set(FILE_CONTENTS "${FILE_CONTENTS}#include \"${REL_FILE}\"\n")
   endforeach ()
   file(CONFIGURE OUTPUT "${AMALGAMATED_HEADER_NAME}" CONTENT "${FILE_CONTENTS}")
 endfunction()
