--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,7 @@ include_directories(${VISAGE_INCLUDE_PATH} ${VISAGE_INCLUDE})
 function(amalgamate_headers AMALGAMATED_HEADER_NAME FILE_HEADERS)
   set(FILE_CONTENTS "// Auto generated amalgamated header.\n")
   foreach (FILE ${FILE_HEADERS})
-    file(RELATIVE_PATH REL_FILE "${PROJECT_SOURCE_DIR}" "${FILE}")
-    set(FILE_CONTENTS "${FILE_CONTENTS}#include \"${REL_FILE}\"\n")
+    set(FILE_CONTENTS "${FILE_CONTENTS}#include \"${FILE}\"\n")
   endforeach ()
   file(CONFIGURE OUTPUT "${AMALGAMATED_HEADER_NAME}" CONTENT "${FILE_CONTENTS}")
 endfunction()
