Adding native menu bar for mac.

--- a/visage_ui/CMakeLists.txt
+++ b/visage_ui/CMakeLists.txt
@@ -1,3 +1,7 @@
+if (APPLE)
+  list(APPEND PLATFORM_FILES macos/menu_bar.mm)
+endif ()
+
 file(GLOB HEADERS *.h)
 file(GLOB SOURCE_FILES *.cpp)
 if (VISAGE_AMALGAMATED_BUILD)
@@ -8,7 +12,7 @@ endif ()
 amalgamate_headers(${VISAGE_INCLUDE}/visage/ui.h "${HEADERS}")
 list(APPEND HEADERS ${VISAGE_INCLUDE}/visage/ui.h)
 
-add_library(VisageUi OBJECT ${SOURCE_FILES} ${HEADERS})
+add_library(VisageUi OBJECT ${SOURCE_FILES} ${HEADERS} ${PLATFORM_FILES})
 target_include_directories(VisageUi PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${VISAGE_INCLUDE_PATH})
 target_link_libraries(VisageUi PRIVATE VisageGraphicsEmbeds)
 set_target_properties(VisageUi PROPERTIES FOLDER "visage")
