Trying to turn off leak detector on linux GA again.

--- a/.github/workflows/linux-test.yaml
+++ b/.github/workflows/linux-test.yaml
@@ -22,9 +22,9 @@ jobs:
 
       - name: Build, Package and Test
         run: |
+          export ASAN_OPTIONS=detect_leaks=0
           mkdir cmake_build
           cd cmake_build
-          ASAN_OPTIONS=detect_leaks=0
           cmake -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON -DVISAGE_ADDRESS_SANITIZER=ON -DVISAGE_ENABLE_GRAPHICS_DEBUG_LOGGING=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -G "Unix Makefiles" ..
           cmake --build . --target package --parallel
           ctest --output-on-failure
